# Stellar-Agent-Flow

./: .gitignore  AGENTFLOW_STELLAR_PROTOCOL_BLUEPRINT.md  HOW_IT_WORKS.md  README.md  SKILLS.md  STELLAR_AGENT_PAYMENTS_RESOURCES.md  USAGE_GUIDE.md  fix_all.py  fix_diagrams.py  fix_how_it_works_precise.py  next.config.ts  package-lock.json  package.json  playwright.config.ts  test-tx.ts  test_emojis.py  vercel.json  vitest.config.ts  vitest.integration.config.ts  vitest.unit.config.ts
.github/workflows/: ci.yml
contracts/agent-manager/: Cargo.toml  README.md
contracts/agent-manager/src/: lib.rs
contracts/agent-manager/test_snapshots/test/: register_and_read_agent.1.json
scripts/: gen-og-image.py
src/app/: globals.css  layout.tsx  layout.unit.test.ts  page.tsx  page.unit.test.ts
src/components/: ui-smoke.unit.test.ts
src/components/canvas/: activity-panel.tsx  agent-node.tsx  chat-panel.interaction.unit.test.ts  chat-panel.tsx  execution-log.tsx  flow-canvas.tsx  toolbar.tsx  (+5 more)
src/data/: agent-registry.ts
src/lib/: agent-store.ts  mpp.ts  mpp.unit.test.ts  payment-policy.ts  payment-policy.unit.test.ts  server-timeout.ts  server-timeout.unit.test.ts  stellar-auth.ts  stellar-auth.unit.test.ts  stellar-policy.ts  stellar-policy.unit.test.ts  utils.ts  utils.unit.test.ts
src/store/: activity-store.ts  activity-store.unit.test.ts  flow-store.ts  flow-store.unit.test.ts
src/types/: index.ts  index.unit.test.ts
tests/e2e/: chat-add-agent.spec.ts  full-flow.spec.ts  ui-policy-check.spec.ts
tests/setup/: vitest.setup.ts
x402/: client.mjs  server.mjs
(+30 files in other folders)
